[package]
name = "git-integrate"
version = "0.0.1"
authors = ["Tom Miller <jackerran@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://nest.pijul.com/tmiller/git-integrate"

[dependencies]
git2 = "0.10"
graphql_client = "0.8"
serde = "1.0"
serde_derive = "1.0"
reqwest = "0.9"
clap = "2.0"
